<?xml version="1.0"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="
        http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <!-- ru.vlapin.experiments.lombok.Main settings -->
    <groupId>ru.vlapin.experiments</groupId>
    <artifactId>Java9Lombok</artifactId>
    <version>1.0-SNAPSHOT</version>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>9</java.version>
        <maven-compiler-plugin.version>3.6.1</maven-compiler-plugin.version>
    </properties>
    <dependencies>
        <!--COMMON LIBS-->
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>LATEST</version>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>io.vavr</groupId>
            <artifactId>vavr</artifactId>
            <version>LATEST</version>
        </dependency>
        <!--CODE GENERATION-->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>LATEST</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>edu.washington.cs.types.checker</groupId>
            <artifactId>checker-framework</artifactId>
            <version>LATEST</version>
            <scope>provided</scope>
        </dependency>
        <!--TEST-->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <version>LATEST</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>LATEST</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>java-hamcrest</artifactId>
            <version>LATEST</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-all</artifactId>
            <version>LATEST</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
    <build>
        <finalName>tourist</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <compilerArgs>
                        <arg>-parameters</arg>
                        <!--<arg>&#45;&#45;add-modules=java.xml.ws.annotation</arg>-->
                        <!--<arg>&#45;&#45;permit-illegal-access</arg>-->
                        <arg>-J--add-opens</arg>
                        <arg>-Jjdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
                        <arg>-J--add-opens</arg>
                        <arg>-Jjdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
                        <arg>-J--add-opens</arg>
                        <arg>-Jjdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
                        <arg>-J--add-opens</arg>
                        <arg>-Jjdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
                        <arg>-J--add-opens</arg>
                        <arg>-Jjdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
                        <arg>-J--add-opens</arg>
                        <arg>-Jjdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
                        <arg>-J--add-opens</arg>
                        <arg>-Jjdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
                        <arg>-J--add-opens</arg>
                        <arg>-Jjdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
                        <arg>-J--add-opens</arg>
                        <arg>-Jjdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.20</version>
                <configuration>
                    <!--<argLine>&#45;&#45;add-modules java.se.ee</argLine>-->
                    <!--<argLine>-parameters -J&#45;&#45;add-opens -Jjdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED -J&#45;&#45;add-opens -Jjdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED -J&#45;&#45;add-opens -Jjdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED -J&#45;&#45;add-opens -Jjdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED -J&#45;&#45;add-opens -Jjdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED -J&#45;&#45;add-opens -Jjdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED -J&#45;&#45;add-opens -Jjdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED -J&#45;&#45;add-opens -Jjdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED -J&#45;&#45;add-opens -Jjdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</argLine>-->
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>